[metadata]
name = jvlib
version = 0.0.1
author = Jeff Valenti
author_email = valenti@stsci.edu
description = Astronomy tools maintained by Jeff Valenti
long_description = file: README.md
long_description_content_type = text/markdown
url = https://github.com/JeffValenti/jvlib
project_urls =
    Bug Tracker = https://github.com/JeffValenti/jvlib/issues
classifiers =
    Programming Language :: Python :: 3
    Operating System :: OS Independent

[options]
package_dir =
    = src
packages = find:
scripts =
    bin/template.py
    bin/jwst_program_data

[options.packages.find]
where = src
