[metadata]
name = jvlib
version = 0.0.1
author = Jeff Valenti
author_email = valenti@stsci.edu
description = Astronomy tools maintained by Jeff Valenti
long_description = file: README.md
long_description_content_type = text/markdown
url = https://github.com/JeffValenti/jvlib
project_urls =
    Bug Tracker = https://github.com/JeffValenti/jvlib/issues
classifiers =
    Programming Language :: Python :: 3
    Operating System :: OS Independent

[options]
package_dir = 
    = src
scripts =
    bin/calwebb_reprocess_associations
    bin/calwebb_reprocess_exposures
    bin/jwst_engdb_plot
    bin/jwst_program_data
    bin/jwst_visit_evmsg
